force-app/main/default/objects/CLQ_Case_Custom__c/fields/Approve_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Approve_Due_Date__c</fullName>
    <label>Approve Due Date</label>
    <type>Date</type>
</CustomField>