force-app/main/default/objects/CLQ_Case_Custom__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <displayFormat>{0000}</displayFormat>
    <externalId>true</externalId>
    <label>Case</label>
    <type>AutoNumber</type>
</CustomField>