force-app/main/default/objects/CLQ_Case_Custom__c/fields/Case_Program_Address__c.field-meta.xml
<CustomField>
    <fullName>Case_Program_Address__c</fullName>
    <description>Program address field concatenated into a single custom field</description>
    <formula>CLQ_Program_Street_Address1__c &amp; &quot;, &quot; &amp; CLQ_Program_City__c &amp; &quot;, &quot; &amp;  CLQ_Program_State__c &amp; &quot;, &quot; &amp; CLQ_Program_Zipcode__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Program Address</label>
    <type>Text</type>
</CustomField>