force-app/main/default/objects/CLQ_Case_Custom__c/fields/CLQ_6_Point_Serious_Risk_Non_Compliance__c.field-meta.xml
<CustomField>
    <fullName>CLQ_6_Point_Serious_Risk_Non_Compliance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Six Point Serious Risk Non-Compliance</label>
    <type>Checkbox</type>
</CustomField>