force-app/main/default/objects/CLQ_Case_Custom__c/fields/CLQ_Abuse_of_child_by_any_adult__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Abuse_of_child_by_any_adult__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Abuse of child by any adult</label>
    <type>Checkbox</type>
</CustomField>