force-app/main/default/objects/CLQ_Case_Custom__c/fields/CLQ_Accepted_Case_Actions_Enforcement__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Accepted_Case_Actions_Enforcement__c</fullName>
    <label>#Accepted_Case_Actions_Enforcement</label>
    <summaryFilterItems>
        <field>CLQ_Case_Action_Details__c.CLQ_Actions__c</field>
        <operation>equals</operation>
        <value>Recommendation Accepted</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>CLQ_Case_Action_Details__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Case Action - Enforcement</value>
    </summaryFilterItems>
    <summaryForeignKey>CLQ_Case_Action_Details__c.CLQ_Case_Custom__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>