force-app/main/default/objects/CLQ_Case_Custom__c/fields/CLQ_Action_Taken__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Action_Taken__c</fullName>
    <label>Action Taken</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Emergency Services (police/fire/ambulance) 911 Called</fullName>
            </value>
            <value>
                <fullName>Emergency Services Transported Child or Child Transported to the Hospital</fullName>
            </value>
            <value>
                <fullName>Local Health Department Contacted</fullName>
            </value>
            <value>
                <fullName>Parent followed up with Medical/Dental Care</fullName>
            </value>
            <value>
                <fullName>Public Children Services Agency Contacted</fullName>
            </value>
            <value>
                <fullName>Poison Control Contacted</fullName>
            </value>
            <value>
                <fullName>Program Recommended Medical/Dental Care</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>