force-app/main/default/objects/CLQ_Case_Custom__c/fields/CLQ_Activity_Date__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Activity_Date__c</fullName>
    <label>Activity Date</label>
    <type>Date</type>
</CustomField>