force-app/main/default/objects/CLQ_Case_Custom__c/fields/CLQ_Activity_Status__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Activity_Status__c</fullName>
    <label>Activity Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PAO Being Drafted</fullName>
                <color>#0B6FCE</color>
                <label>PAO Being Drafted</label>
            </value>
            <value>
                <fullName>PAO Sent</fullName>
                <color>#78C953</color>
                <label>PAO Sent</label>
            </value>
            <value>
                <fullName>Suspension Order Delivered</fullName>
            </value>
            <value>
                <fullName>Hearing Requested</fullName>
                <color>#E27001</color>
                <label>Hearing Requested</label>
            </value>
            <value>
                <fullName>Post Hearing</fullName>
                <color>#A845DC</color>
                <label>Post Hearing</label>
            </value>
            <value>
                <fullName>AO Mailed</fullName>
                <color>#F3D904</color>
                <label>AO Mailed</label>
            </value>
            <value>
                <fullName>AO Appealed</fullName>
                <color>#A53711</color>
                <label>AO Appealed</label>
            </value>
            <value>
                <fullName>Closed</fullName>
                <color>#0B24BE</color>
                <label>Closed</label>
            </value>
            <value>
                <fullName>Unable to Locate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>