force-app/main/default/objects/CLQ_Case_Custom__c/fields/CLQ_Activity_Type__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Activity_Type__c</fullName>
    <label>Activity Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Enforcement</fullName>
            </value>
            <value>
                <fullName>Suspension</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>