force-app/main/default/objects/CLQ_Case_Custom__c/fields/CLQ_Add_Comments__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Add_Comments__c</fullName>
    <description>Any Comments or additional information regarding the investigation.</description>
    <inlineHelpText>Add any Comments or additional information regarding the investigation.</inlineHelpText>
    <label>Add Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>