force-app/main/default/objects/CLQ_Case_Custom__c/fields/CLQ_Additional_Information__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Additional_Information__c</fullName>
    <inlineHelpText>This field should be used to add additional information that is obtained after the complaint has been submitted.</inlineHelpText>
    <label>Additional Information</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>