force-app/main/default/objects/CLQ_Case_Custom__c/fields/CLQ_Age_of_Children_Involved__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Age_of_Children_Involved__c</fullName>
    <description>Age of children injured or involved in the incident</description>
    <inlineHelpText>Age of children injured or involved in the incident</inlineHelpText>
    <label>Age of Children Involved</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Infant</fullName>
            </value>
            <value>
                <fullName>Toddler</fullName>
            </value>
            <value>
                <fullName>Pre-School</fullName>
            </value>
            <value>
                <fullName>School Age</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>