force-app/main/default/objects/CLQ_Case_Custom__c/fields/CLQ_Age_of_Children_Present_at_the_Incid__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Age_of_Children_Present_at_the_Incid__c</fullName>
    <description>The age of children who were present at the time of the incident/injury.</description>
    <inlineHelpText>The age of children who were present at the time of the incident/injury.</inlineHelpText>
    <label>Age of Children Present at the Incident</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Infant</fullName>
            </value>
            <value>
                <fullName>Toddler</fullName>
            </value>
            <value>
                <fullName>Pre-School</fullName>
            </value>
            <value>
                <fullName>School Age</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>