force-app/main/default/objects/CLQ_Case_Custom__c/fields/CLQ_Agency_Referral_Type__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Agency_Referral_Type__c</fullName>
    <label>Agency Referral Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PCSA</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>