force-app/main/default/objects/CLQ_Case_Custom__c/fields/CLQ_Alleged_Operator_Email__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Alleged_Operator_Email__c</fullName>
    <label>Alleged Operator E-mail</label>
    <type>Email</type>
</CustomField>