force-app/main/default/objects/CLQ_Case_Custom__c/fields/CLQ_Alleged_operator_name__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Alleged_operator_name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Alleged Operator Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>AR_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>