force-app/main/default/objects/CLQ_Case_Custom__c/fields/CLQ_Alleged_Operator_Phone__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Alleged_Operator_Phone__c</fullName>
    <description>Phone Number</description>
    <label>Alleged Operator Phone</label>
    <type>Phone</type>
</CustomField>