force-app/main/default/objects/CLQ_Case_Custom__c/fields/CLQ_Alleged_Operator_Street__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Alleged_Operator_Street__c</fullName>
    <label>Alleged Operator Street</label>
    <length>128</length>
    <type>Text</type>
</CustomField>