force-app/main/default/objects/CLQ_Case_Custom__c/fields/CLQ_Alleged_Operator_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Alleged_Operator_Zip_Code__c</fullName>
    <label>Alleged Operator Zip Code</label>
    <length>128</length>
    <type>Text</type>
</CustomField>