force-app/main/default/objects/CLQ_Case_Custom__c/fields/CLQ_Alleged_Ops_Name__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Alleged_Ops_Name__c</fullName>
    <formula>CLQ_First_Name__c + &quot;  &quot; + CLQ_Last_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Alleged Ops Name</label>
    <type>Text</type>
</CustomField>