force-app/main/default/objects/CLQ_Case_Custom__c/fields/CLQ_Alleged_Ops_Submitted__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Alleged_Ops_Submitted__c</fullName>
    <label>Alleged Ops Submitted</label>
    <length>60</length>
    <type>Text</type>
</CustomField>