force-app/main/default/objects/CLQ_Case_Custom__c/fields/CLQ_Alleged_Violation_Rule_Count__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Alleged_Violation_Rule_Count__c</fullName>
    <label>Alleged Violation Rule Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>