force-app/main/default/objects/CLQ_Case_Custom__c/fields/CLQ_Allergic_Reaction_Asthma_Attack__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Allergic_Reaction_Asthma_Attack__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allergic Reaction / Asthma Attack</label>
    <type>Checkbox</type>
</CustomField>