force-app/main/default/objects/CLQ_Case_Custom__c/fields/CLQ_Anonymous_Complainant__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Anonymous_Complainant__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Anonymous Complainant</label>
    <type>Checkbox</type>
</CustomField>