force-app/main/default/objects/CLQ_Case_Custom__c/fields/CLQ_Approved_by_Manager__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Approved_by_Manager__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used in approval process and process flows to check for status of Case approval. Not needed on page layouts</description>
    <label>Approved by Manager</label>
    <type>Checkbox</type>
</CustomField>