force-app/main/default/objects/CLQ_Case_Custom__c/fields/CLQ_Approver_Comments__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Approver_Comments__c</fullName>
    <label>Approver Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>