force-app/main/default/objects/CLQ_Case_Custom__c/fields/CLQ_Approver_s_Email__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Approver_s_Email__c</fullName>
    <label>Approver&apos;s Email</label>
    <type>Email</type>
</CustomField>