force-app/main/default/objects/CLQ_Case_Custom__c/fields/CLQ_Assigned_Specialist_Reviewer__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Assigned_Specialist_Reviewer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned Specialist/Reviewer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>AR_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>