force-app/main/default/objects/CLQ_Case_Custom__c/fields/CLQ_Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Assigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>AR_Cases1</relationshipName>
    <type>Lookup</type>
</CustomField>