force-app/main/default/objects/CLQ_Case_Custom__c/fields/CLQ_Assigned_to_Email__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Assigned_to_Email__c</fullName>
    <label>Assigned to Email</label>
    <type>Email</type>
</CustomField>