force-app/main/default/objects/CLQ_Case_Custom__c/fields/CLQ_Blow_or_Bump_to_the_Head__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Blow_or_Bump_to_the_Head__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Blow or Bump to the Head</label>
    <type>Checkbox</type>
</CustomField>