force-app/main/default/objects/CLQ_Case_Custom__c/fields/CLQ_Broken_Disclosed_Bone__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Broken_Disclosed_Bone__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Broken/Dislocated Bone</label>
    <type>Checkbox</type>
</CustomField>