force-app/main/default/objects/CLQ_Case_Custom__c/fields/CLQ_Caretaker_Letter_Sent__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Caretaker_Letter_Sent__c</fullName>
    <label>Caretaker Letter Sent</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>No Authorizations</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>