force-app/main/default/objects/CLQ_Case_Custom__c/fields/CLQ_Case_Closure_Date__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Case_Closure_Date__c</fullName>
    <label>Case Closure Date</label>
    <type>Date</type>
</CustomField>