force-app/main/default/objects/CLQ_Case_Custom__c/fields/CLQ_Case_Custom_Record_Type_API__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Case_Custom_Record_Type_API__c</fullName>
    <formula>RecordType.DeveloperName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Custom Record Type API</label>
    <type>Text</type>
</CustomField>