force-app/main/default/objects/CLQ_Case_Custom__c/fields/CLQ_Case_Custom_RTName__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Case_Custom_RTName__c</fullName>
    <formula>RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Record Type</label>
    <type>Text</type>
</CustomField>