force-app/main/default/objects/CLQ_Case_Custom__c/fields/CLQ_Child_unattended_off_site_program__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Child_unattended_off_site_program__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Child unattended off-site program</label>
    <type>Checkbox</type>
</CustomField>