force-app/main/default/objects/CLQ_Case_Custom__c/fields/CLQ_Child_unattended_on_site_inside_pgm__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Child_unattended_on_site_inside_pgm__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Child unattended on-site inside program</label>
    <type>Checkbox</type>
</CustomField>