force-app/main/default/objects/CLQ_Case_Custom__c/fields/CLQ_Child_Unattended_On_site_Outside_Pgm__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Child_Unattended_On_site_Outside_Pgm__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Child Unattended On-site Outside Program</label>
    <type>Checkbox</type>
</CustomField>