force-app/main/default/objects/CLQ_Case_Custom__c/fields/CLQ_Collapse_Faint__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Collapse_Faint__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Collapse / Faint</label>
    <type>Checkbox</type>
</CustomField>