force-app/main/default/objects/CLQ_Case_Custom__c/fields/CLQ_Complainant_Email__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Complainant_Email__c</fullName>
    <label>Complainant E-mail</label>
    <type>Email</type>
</CustomField>