force-app/main/default/objects/CLQ_Case_Custom__c/fields/CLQ_Complainant_Phone__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Complainant_Phone__c</fullName>
    <label>Complainant Phone</label>
    <type>Phone</type>
</CustomField>