force-app/main/default/objects/CLQ_Case_Custom__c/fields/CLQ_Complainant_Phone_Ext__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Complainant_Phone_Ext__c</fullName>
    <label>Complainant Phone Ext.</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>