force-app/main/default/objects/CLQ_Case_Custom__c/fields/CLQ_Complainant_State__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Complainant_State__c</fullName>
    <formula>TEXT(CLQ_Program__r.CLQ_State__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>State</label>
    <type>Text</type>
</CustomField>