force-app/main/default/objects/CLQ_Case_Custom__c/fields/CLQ_Complainant_Street_2__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Complainant_Street_2__c</fullName>
    <label>Complainant Street 2</label>
    <length>128</length>
    <type>Text</type>
</CustomField>