force-app/main/default/objects/CLQ_Case_Custom__c/fields/CLQ_Complaint_Inspection_Approved__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Complaint_Inspection_Approved__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number field not visible to the user. Used for firing WF rule to send complaint inspection report for CDC web solution</description>
    <label>CLQ Complaint Inspection Approved</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>