force-app/main/default/objects/CLQ_Case_Custom__c/fields/CLQ_Complaint_Submitted__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Complaint_Submitted__c</fullName>
    <label>Complaint Submitted</label>
    <length>20</length>
    <type>Text</type>
</CustomField>