force-app/main/default/objects/CLQ_Case_Custom__c/fields/CLQ_Complete_Allegation__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Complete_Allegation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Complete Allegation</label>
    <type>Checkbox</type>
</CustomField>