force-app/main/default/objects/CLQ_Case_Custom__c/fields/CLQ_Complete_Disposition__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Complete_Disposition__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Complete Disposition</label>
    <type>Checkbox</type>
</CustomField>