force-app/main/default/objects/CLQ_Case_Custom__c/fields/CLQ_Complete_Inspection__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Complete_Inspection__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Complete Inspection</label>
    <type>Checkbox</type>
</CustomField>