force-app/main/default/objects/CLQ_Case_Custom__c/fields/CLQ_Complete_Inspection_Date__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Complete_Inspection_Date__c</fullName>
    <description>Date is set by the WFR when the Complete Inspection is set to True</description>
    <label>Complete Inspection Date</label>
    <type>Date</type>
</CustomField>