force-app/main/default/objects/CLQ_Case_Custom__c/fields/CLQ_Complete_Review__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Complete_Review__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Incident Injury</description>
    <label>Complete Review</label>
    <type>Checkbox</type>
</CustomField>