force-app/main/default/objects/CLQ_Case_Custom__c/fields/CLQ_Completed_Allegation_Review__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Completed_Allegation_Review__c</fullName>
    <label>Completed Allegation Review</label>
    <type>Date</type>
</CustomField>