force-app/main/default/objects/CLQ_Case_Custom__c/fields/CLQ_Contact_Address__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Contact_Address__c</fullName>
    <formula>ContactId__r.MailingStreet + &apos; &apos; + ContactId__r.MailingCity + &apos; &apos; + ContactId__r.MailingState + &apos; &apos; +  ContactId__r.MailingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Address</label>
    <type>Text</type>
</CustomField>