force-app/main/default/objects/CLQ_Case_Custom__c/fields/CLQ_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Contact_Email__c</fullName>
    <formula>ContactId__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Email</label>
    <type>Text</type>
</CustomField>