force-app/main/default/objects/CLQ_Case_Custom__c/fields/CLQ_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Contact_Phone__c</fullName>
    <formula>ContactId__r.MobilePhone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Phone</label>
    <type>Text</type>
</CustomField>