force-app/main/default/objects/CLQ_Case_Custom__c/fields/CLQ_County_Alleged_Ops__c.field-meta.xml
<CustomField>
    <fullName>CLQ_County_Alleged_Ops__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Alleged Operator County</label>
    <referenceTo>CLQ_County__c</referenceTo>
    <relationshipName>AR_Cases2</relationshipName>
    <type>Lookup</type>
</CustomField>