force-app/main/default/objects/CLQ_Case_Custom__c/fields/CLQ_County_Complainant__c.field-meta.xml
<CustomField>
    <fullName>CLQ_County_Complainant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Complainant County</label>
    <referenceTo>CLQ_County__c</referenceTo>
    <relationshipName>AR_Cases1</relationshipName>
    <type>Lookup</type>
</CustomField>