force-app/main/default/objects/CLQ_Case_Custom__c/fields/CLQ_Date_of_Referral__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Date_of_Referral__c</fullName>
    <label>Date of Referral</label>
    <type>Date</type>
</CustomField>