force-app/main/default/objects/CLQ_Case_Custom__c/fields/CLQ_Date_Time_of_Incident_Injury__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Date_Time_of_Incident_Injury__c</fullName>
    <label>Date/Time of Incident/Injury</label>
    <type>DateTime</type>
</CustomField>