force-app/main/default/objects/CLQ_Case_Custom__c/fields/CLQ_Death_of_a_Child__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Death_of_a_Child__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Death of a Child</label>
    <type>Checkbox</type>
</CustomField>