force-app/main/default/objects/CLQ_Case_Custom__c/fields/CLQ_Deep_Cut_Laceration__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Deep_Cut_Laceration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deep Cut / Laceration</label>
    <type>Checkbox</type>
</CustomField>