force-app/main/default/objects/CLQ_Case_Custom__c/fields/CLQ_Disable_Validation_Rule__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Disable_Validation_Rule__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Validation Rule</label>
    <type>Checkbox</type>
</CustomField>